# polars-lean

./: .gitignore  Main.lean  PolarsLean.lean  flake.nix  lake-manifest.json  lakefile.lean
PolarsLean/: DataFrame.lean  DataType.lean  Error.lean  LazyFrame.lean  Series.lean
rust/: Cargo.toml  build.rs
rust/src/: data_frame.rs  data_type.rs  error.rs  external_class.rs  io.rs  lazy_frame.rs  lib.rs  series.rs  sys.rs
