[package]
name = "polars-lean"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "polars_lean"
crate-type = ["staticlib"]

[dependencies]
polars = { version = "0.35.4", features = ["dtype-full", "lazy"] }

[build-dependencies]
bindgen = "0.69.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
